--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1114,7 +1114,7 @@ input[type=color] {
   }
 }
 .header__top-search {
-  max-width: 260px;
+  max-width: 100%;
 }
 @media (max-width: 991.98px) {
   .header__top-search {
